kubernetes/guestbook.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
  namespace: guestbook
  labels:
    app: guestbook-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-backend
  template:
    metadata:
      labels:
        app: guestbook-backend
    spec:
      containers:
        - name: guestbook-backend
          image: wusabinga/projekt-backend:latest
          imagePullPolicy: Always
          ports:
            - name: guestbook-port
              protocol: TCP
              containerPort: 3000
