kubernetes/mysql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-projekt
  namespace: guestbook
  labels:
    app: mysql-projekt
spec:
  selector:
    matchLabels:
      app: mysql-projekt
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-projekt
    spec:
      containers:
        - name: mysql-projekt
          image: wusabinga/projekt-mysql:latest
          ports:
            - containerPort: 3306
              name: mysql-port
