kubernetes/guestbook.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend
  namespace: guestbook
spec:
  selector:
    app: guestbook-backend
  type: ClusterIP
  ports:
    - name: guestbook-backend
      protocol: TCP
      port: 80
      targetPort: guestbook-port
