kubernetes/mysql.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-mysql
  namespace: guestbook
spec:
  selector:
    app: mysql-projekt
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: mysql-projekt
      protocol: TCP
      port: 3306
      targetPort: mysql-port
